Update to button styling. Fixed issue with image distrotion on smaller sized screens

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -9,4 +9,4 @@ $sheet-width: 1000px;
 
 //typography
 $font-family-sans-serif: "Helvetica Neue", Helvetica, Arial, sans-serif;
-$font-size-headline: 19vw;
+$font-size-headline: 10vw;
