--- a/src/scss/module/_stage.scss
+++ b/src/scss/module/_stage.scss
@@ -8,6 +8,7 @@
   }
   img {
     max-height: none;
+    max-width: none;
     width: auto;
     height: auto;
     min-width: 100%;
